Bug 483729 - Wifi encryption is not shown in settings
Summary: Wifi encryption is not shown in settings
Status: RESOLVED FIXED
Alias: None
Product: plasma-mobile
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: postmarketOS Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Mobile Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-16 08:03 UTC by Julian Groß
Modified: 2025-02-25 16:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Security type being shown as "none" (157.74 KB, image/png)
2024-03-16 08:03 UTC, Julian Groß
Details
Available security types (180.44 KB, image/png)
2024-03-16 08:03 UTC, Julian Groß
Details
nmtui showing the currently used/configured encryption (150.96 KB, image/png)
2024-03-16 08:04 UTC, Julian Groß
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julian Groß 2024-03-16 08:03:13 UTC
Created attachment 167300 [details]
Security type being shown as "none"

SUMMARY
When connected to a wifi network with encryption, going into the settings and pressing "edit", the encryption is not shown.

STEPS TO REPRODUCE
1. Connect to encrypted wifi network.
2. Go to the Plasma Mobile settings
3. Go to the wifi tab
4. Click on "Edit"
5. Click on the settings icon next to the wifi network
6. Notice how the "security type" shows up as "none"

OBSERVED RESULT
It shows up as "none" which suggests that the network isn't encrypted.

EXPECTED RESULT
It should show "WPA3 personal" or similar.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: postmarketOS Edge (updated 2024-03-16)
(available in About System)
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
In my case, I am using a WPA2/3 network, so the device is using WPA3 personal, which isn't in the list of available options.
Comment 1 Julian Groß 2024-03-16 08:03:34 UTC
Created attachment 167301 [details]
Available security types
Comment 2 Julian Groß 2024-03-16 08:04:07 UTC
Created attachment 167302 [details]
nmtui showing the currently used/configured encryption
Comment 3 Devin Lin 2024-03-16 16:02:24 UTC
Plasma doesn't recognize WPA3 at the moment, I opened https://invent.kde.org/plasma/plasma-mobile/-/issues/336 to track
Comment 4 Devin Lin 2024-06-24 13:33:50 UTC
Git commit a930eabbb26bc16b7287bf656b8c735f9e1ffe4b by Devin Lin.
Committed on 24/06/2024 at 13:30.
Pushed by devinlin into branch 'master'.

kcms/wifi: Add WPA3 support
https://invent.kde.org/plasma/plasma-mobile/-/issues/336

This implements WPA3 support in the wifi KCM. However, the wifi KCM in general is missing implementations for many things (ex. WPA2/3 enterprise). We really should eventually pursue https://invent.kde.org/teams/plasma-mobile/issues/-/issues/294

M  +27   -17   kcms/wifi/ui/NetworkSettings.qml
M  +10   -0    kcms/wifi/wifisettings.cpp

https://invent.kde.org/plasma/plasma-mobile/-/commit/a930eabbb26bc16b7287bf656b8c735f9e1ffe4b
Comment 5 Carl Schwan 2025-02-25 16:56:01 UTC
Git commit bb676f6f729576b59ac68d04a43e23a0446427ab by Carl Schwan, on behalf of Devin Lin.
Committed on 24/02/2025 at 23:00.
Pushed by ltoscano into branch 'master'.

kcms/wifi: Add WPA3 support
https://invent.kde.org/plasma/plasma-mobile/-/issues/336

This implements WPA3 support in the wifi KCM. However, the wifi KCM in general is missing implementations for many things (ex. WPA2/3 enterprise). We really should eventually pursue https://invent.kde.org/teams/plasma-mobile/issues/-/issues/294

M  +27   -17   kcms/wifi/ui/NetworkSettings.qml
M  +10   -0    kcms/wifi/wifisettings.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/bb676f6f729576b59ac68d04a43e23a0446427ab